# project-sandbox

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  PLAN.md  README.md  ROADMAP.md  TODO.md  findings.md  pyproject.toml  review.md  scancode_results.json
.claude/: settings.local.json
.codex/rules/: extra.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  e2e.yml
.project-sandbox/: .gitignore  Dockerfile  entrypoint.sh  init-firewall.sh
.project-sandbox/codex/: config.toml
docs/: PLAN.md  README.md  development.md  references.md  runtime.md  security.md  usage.md
openspec/changes/add-local-ollama-support/: design.md  proposal.md  tasks.md
openspec/changes/add-pi-agent-support/: proposal.md  tasks.md
scripts/: check-ruff.sh  e2e-dockerfile-tamper.sh  e2e-env-injection.sh  e2e-git-workflow.sh  e2e-jj-workflow.sh  e2e-pi-ollama.sh  e2e-test.sh  make-release.sh  run-e2e-tests.sh  update-pins.py  verify-timeout-teardown.sh
src/project_sandbox/: __init__.py  build_cache.py  chroot.py  cli.py  config_agents.py  config_claude.py  config_codex.py  config_jj.py  container_cli.py  devcontainer.py  dockerfile.py  dockerfile_checksum.py  firewall.py  git_identity.py  jj_workspace.py  launcher.py  oauth_refresh.py  ollama_network.py  paths.py  session.py  templating.py  token_expiry.py  transcript.py  worktree.py
tests/: conftest.py  test_build_cache.py  test_cli.py  test_config_jj.py  test_container_cli.py  test_credential_policy.py  test_credential_warning.py  test_devcontainer.py  test_dockerfile_checksum.py  test_gitignore.py  test_jj_workspace.py  test_oauth_refresh.py  test_ollama_network.py  test_renderers.py  test_session.py  test_token_expiry.py  test_transcript.py  test_update_pins.py  test_worktree.py
(+33 files in other folders)
