[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-sandbox"
version = "0.1.1"
description = "Sandbox coding agents inside isolated container runtimes."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "jinja2==3.1.6",
]

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "ruff==0.15.22",
]

[project.scripts]
project-sandbox = "project_sandbox.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/project_sandbox"]

[tool.uv]
cache-dir = ".uv_cache"
